# grim_IK

./: .gitignore  CMakeLists.txt  SConscript  SConstruct  common.h  grim_vik.cpp  grim_vik.h  plugin_main.cpp
binaries/2017/: grim_IK.bundle  grim_IK.mll
binaries/2018.1/: grim_IK.bundle  grim_IK.mll
example_scenes/: test_scene_01.ma  test_scene_02.ma
